--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "2.16.2",
+    "react-native-reanimated": "3.11.0",
+    "react-native-safe-area-context": "^4.10.3",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.24.6",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.83",
@@ -28,6 +41,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
